bin_PROGRAMS = netflow

netflow_SOURCES = main.c cmdlintf.c netflow.c nettap.c ipflowlist.c \
	pkteng.c lookupdev.c pfpacket.c bpf.c pcap.c \
	hasheng.c memhash.c setproctitle.c cmdfcn.c \
	utils.c pthread_rwlock.c setsignal.c netflow_cache.c \
	pktbuf_v1.c pktbuf_v2.c copyr.c global_var.c

noinst_HEADERS = cmdlintf.h ipnetflow_ds.h  netflow_v5.h  \
		pthread_rwlock.h ipnetflow.h     netflow_v7.h  \
		setproctitle.h hasheng.h     ippacket.h     \
		pktbuf.h      typedef.h ipflowlist.h  netflow_v1.h \
		pkteng.h      utils.h netflow_cache.h global_var.h
